# autosar-temp-monitor

./: CMakeLists.txt  Readme.md  analyse.md  srс.md
include/: autosar_adaptive.hpp  autosar_classic.hpp  temperature_monitor.hpp
src/: autosar_adaptive.cpp  autosar_classic.cpp  main.cpp  temperature_monitor.cpp
tests/: CMakeLists.txt  manual_test.cpp  temperature_monitor_test.cpp  test_temperature_monitor.cpp
